--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,45 @@
-<h2>Sign up</h2>
+<div class="columns is-centered">
+  <div class="column is-half">
+    <div class="box">
+      <h1 class="is-size-3 pb-2">Register</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :email, class: 'label' %>
+          <div class="control">
+            <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'input' %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password, class: 'label' %>
+          <div class="control">
+            <%= f.password_field :password, autocomplete: 'new-password', class: 'input' %>
+          </div>
+          <% if @minimum_password_length %>
+            <p class="help">
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+            </p>
+          <% end %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, class: 'label' %>
+          <div class="control">
+            <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'input' %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.submit 'Sign up', class: 'button is-primary' %>
+        </div>
+
+        <div class="field">
+          Already have an account? <%= link_to 'Back to sign in', new_user_session_path %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
