--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,39 +38,48 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <nav class="navbar is-spaced is-dark" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <%= link_to home_path, class: 'navbar-item' do %>
-            <h1 class="is-size-4 has-text-white">Songdown</h1>
-          <% end %>
-          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="songdownnavbar">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
+    <nav class="navbar is-spaced is-dark" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <%= link_to home_path, class: 'navbar-item' do %>
+          <h1 class="is-size-4 has-text-white">Songdown</h1>
+        <% end %>
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="songdownnavbar">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
 
-        <div class="navbar-menu" id="songdownnavbar">
+      <div class="navbar-menu" id="songdownnavbar">
+        <% if user_signed_in? %>
           <div class="navbar-start">
             <%= link_to 'Home', home_path, class: 'navbar-item' %>
             <%= link_to 'Songs', songs_path, class: 'navbar-item' %>
             <%= link_to 'Setlists', setlists_path, class: 'navbar-item' %>
+          </div>
+          <div class="navbar-end">
             <%= link_to 'Settings', settings_path, class: 'navbar-item' %>
             <%= link_to 'About', about_path, class: 'navbar-item' %>
             <%= link_to 'Help', help_path, class: 'navbar-item' %>
             <%= link_to 'Logout', destroy_session_path(current_user), method: :delete, class: 'navbar-item' %>
           </div>
-        </div>
-      </nav>
-    <% end %>
+        <% else %>
+          <div class="navbar-end">
+            <%= link_to 'Sign in', new_user_session_path, class: 'navbar-item' %>
+            <%= link_to 'Register', new_user_registration_path, class: 'navbar-item' %>
+          </div>
+        <% end %>
+      </div>
+    </nav>
 
     <section class="section">
       <div class="container">
-        <h1 class="title is-size-4"><%= yield :title %></h1>
-        <hr />
+        <% if content_for(:title) %>
+          <h1 class="title is-size-4"><%= yield :title %></h1>
+          <hr />
+        <% end %>
 
-        <% if notice %>
+        <% if notice.present? %>
           <div class="message is-success">
             <div class="message-body">
               <%= notice %>
@@ -78,7 +87,7 @@
           </div>
         <% end %>
 
-        <% if alert %>
+        <% if alert.present? %>
           <div class="message is-warning">
             <div class="message-body">
               <%= alert %>
@@ -87,17 +96,15 @@
         <% end %>
 
         <%= yield %>
-
-        <footer class="footer">
-          <div class="container has-text-centered">
-            <% if user_signed_in? %>
-              Logged in as <%= current_user.decorate :full_name %>
-            <% else %>
-              Songdown is a creation of <a href="https://github.com/1vasari" target="_blank" rel="noopener noreferrer">1vasari</a>.
-            <% end %>
-          </div>
-        </footer>
       </div>
     </section>
+
+    <% if user_signed_in? %>
+      <footer class="footer">
+        <div class="container has-text-centered">
+          Logged in as <%= current_user.decorate :full_name %>
+        </div>
+      </footer>
+    <% end %>
   </body>
 </html>
