--- a/app/views/setlists/_song_search_result.html.erb
+++ b/app/views/setlists/_song_search_result.html.erb
@@ -1,5 +1,3 @@
-<li class="menu-item">
-  <%= link_to setlist_add_song_path(setlist_id: @setlist.id, song_id: song_search_result.id), class: 'fancy-link' do %>
-    <%= song_search_result.artist %> - <%= song_search_result.title %>
-  <% end %>
-</li>
+<%= link_to setlist_add_song_path(setlist_id: @setlist.id, song_id: song_search_result.id), class: 'panel-block' do %>
+  <%= song_search_result.artist %> - <%= song_search_result.title %>
+<% end %>
