--- a/app/views/setlists/search_songs.js.erb
+++ b/app/views/setlists/search_songs.js.erb
@@ -1,3 +1,3 @@
-var el = document.getElementById('search-results')
+var el = document.getElementById('search-results');
 el.innerHTML = '<%= j render partial: 'song_search_result', collection: @results %>';
 el.style.display = 'block';
