--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -31,7 +31,7 @@
 
   <div class="field">
     <%= f.label :title, class: 'label' %>
-    <div class="contro.">
+    <div class="control">
       <%= f.text_field :title, placeholder: 'Title', class: 'input' %>
     </div>
   </div>
@@ -74,8 +74,11 @@
         data: { confirm: "Are you sure you want to delete '#{@song.title}'?" }
       %>
     <% end %>
-    <p class="help">
-      Last updated: <%= @song.decorate(:updated_at_ago) %>
-    </p>
+
+    <% if @song.persisted? %>
+      <p class="help">
+        Last updated: <%= @song.decorate(:updated_at_ago) %>
+      </p>
+    <% end %>
   </div>
 <% end %>
