Fixes and style updates

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -9,6 +9,6 @@
   </ul>
 
   <div class="">
-    <%= image_tag 'help.png', :class => 'pure-img' %>
+    <%= image_tag 'help.png', :class => 'image' %>
   </div>
 </div>
