--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <!-- Disable Turbolinks caching -->
     <meta name="turbolinks-cache-control" content="no-cache">
 
-    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Inconsolata&display=swap' %>
     <%= stylesheet_link_tag 'https://unpkg.com/bulma@0.9.2/css/bulma.min.css' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 
