--- a/app/views/songs/print_song.html.erb
+++ b/app/views/songs/print_song.html.erb
@@ -1,4 +1,5 @@
-<h1 style="text-align: center;"><%= @song.full_name %></h1>
+<h1 style="text-align: center;"><%= @song.title %></h1>
+<p style="text-align: right;"><%= @song.artist %></p>
 
 <%= @song_html.html_safe %>
 
