--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,10 +1,9 @@
 <% content_for(:title, 'Home') %>
 
 <div class="columns">
-  <div class="column">
-    <div class="is-pulled-right">
-      <%= render 'songs/search' %>
-    </div>
+  <div class="column is-hidden-mobile">&nbsp;</div>
+  <div class="column is-narrow">
+    <%= render 'songs/search' %>
   </div>
 </div>
 
@@ -12,13 +11,17 @@
   <div class="column">
     <aside class="menu">
       <p class="menu-label">Frequently Played</p>
-      <ul class="menu-list">
+      <ul class="menu-list px-6 py-2">
         <% @top_songs.each do |song| %>
           <li>
             <%= link_to song do %>
-              <div class="level">
-                <div class="level-item"><%= song.title %></div>
-                <div class="level-item has-text-weight-bold"><%= song.artist %></div>
+              <div class="columns">
+                <div class="column has-text-centered-mobile">
+                  <%= song.title %>
+                </div>
+                <div class="column is-narrow has-text-weight-bold is-hidden-mobile">
+                  <%= song.artist %>
+                </div >
               </div>
             <% end %>
           </li>
@@ -30,13 +33,17 @@
   <div class="column">
     <asice class="menu">
       <p class="menu-label">New</p>
-      <ul class="menu-list">
+      <ul class="menu-list px-6 py-2">
         <% @new_songs.each do |song| %>
           <li>
             <%= link_to song do %>
-              <div class="level">
-                <div class="level-item"><%= song.title %></div>
-                <div class="level-item has-text-weight-bold"><%= song.artist %></div>
+              <div class="columns">
+                <div class="column has-text-centered-mobile">
+                  <%= song.title %>
+                </div>
+                <div class="column is-narrow has-text-weight-bold is-hidden-mobile">
+                  <%= song.artist %>
+                </div >
               </div>
             <% end %>
           </li>
